--- a/mifosng-android/src/main/res/layout/fragment_group_details.xml
+++ b/mifosng-android/src/main/res/layout/fragment_group_details.xml
@@ -1,28 +1,309 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/default_padding"
-    android:layout_marginEnd="@dimen/default_padding"
-    android:id="@+id/rl_group">
+    android:layout_marginEnd="@dimen/default_padding">
 
     <ScrollView style="@style/ScrollView.Base">
 
         <LinearLayout style="@style/LinearLayout.Base">
 
-            <LinearLayout style="@style/LinearLayout.Width">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_groupDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:cardCornerRadius="10dp"
+                app:cardUseCompatPadding="true">
 
-                <TextView
-                    android:id="@+id/tv_groupsName"
-                    style="@style/TextView.Client" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="15dp">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_groupsName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/external_id" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/activation_date" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:id="@+id/tv_groupexternalId"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_groupactivationDate"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/office" />
+                    <TextView
+                        android:id="@+id/tv_groupoffice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
+                app:cardUseCompatPadding="true">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp">
+
+                    <TextView
+                        android:id="@+id/tv_group_detail_loan_account_count"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/circular_bg_red"
+                        android:gravity="center"
+                        android:text="4"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_size_20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/rv_loan_accounts"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_loan_account_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/text_size_20sp"
+                        android:layout_marginLeft="@dimen/text_size_20sp"
+                        android:layout_marginTop="10dp"
+                        android:text="Loan Accounts"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@+id/tv_group_detail_loan_account_count"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_expandable"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circular_bg_green"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:tag="loan_account"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_add_green" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_loan_accounts"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_marginTop="@dimen/text_size_20sp"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_group_detail_loan_account_count" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
+                app:cardUseCompatPadding="true">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp">
+
+                    <TextView
+                        android:id="@+id/tv_group_detail_saving_account_count"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/circular_bg_red"
+                        android:gravity="center"
+                        android:text="4"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_size_20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/rv_saving_accounts"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_saving_account_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/text_size_20sp"
+                        android:layout_marginLeft="@dimen/text_size_20sp"
+                        android:layout_marginTop="10dp"
+                        android:text="Saving Accounts"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@+id/tv_group_detail_saving_account_count"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_savings_expandable"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circular_bg_green"
+                        android:clickable="true"
+                        android:focusable="true"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_add_green" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_saving_accounts"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_marginTop="@dimen/text_size_20sp"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_group_detail_saving_account_count" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
+                app:cardUseCompatPadding="true">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp">
+
+                    <TextView
+                        android:id="@+id/tv_recurring_count"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/circular_bg_red"
+                        android:gravity="center"
+                        android:text="4"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_size_20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/rv_recurring_accounts"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_recurring_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/text_size_20sp"
+                        android:layout_marginLeft="@dimen/text_size_20sp"
+                        android:layout_marginTop="10dp"
+                        android:text="Recurring Accounts"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@+id/tv_recurring_count"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_recurring_expandable"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circular_bg_green"
+                        android:clickable="true"
+                        android:focusable="true"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_add_green" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_recurring_accounts"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_marginTop="@dimen/text_size_20sp"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_recurring_count" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+
+
+            <!-- <LinearLayout style="@style/LinearLayout.Width">
+
+                 <TextView
+                     android:id="@+id/tv_groupsName"
+                     style="@style/TextView.Client" />
+
+             </LinearLayout>-->
 
 
             <TableLayout
                 android:id="@+id/tbl_clientDetails"
-                style="@style/Table">
+                style="@style/Table"
+                android:visibility="gone">
 
                 <TableRow
                     android:id="@+id/row_account"
@@ -41,9 +322,9 @@
                         style="@style/TextView.Row"
                         android:text="@string/external_id" />
 
-                    <TextView
+                   <!-- <TextView
                         android:id="@+id/tv_groupexternalId"
-                        style="@style/TextView.Row.Value" />
+                        style="@style/TextView.Row.Value" />-->
                 </TableRow>
 
                 <TableRow
@@ -54,9 +335,9 @@
                         style="@style/TextView.Row"
                         android:text="@string/activation_date" />
 
-                    <TextView
+                    <!--<TextView
                         android:id="@+id/tv_groupactivationDate"
-                        style="@style/TextView.Row.Value" />
+                        style="@style/TextView.Row.Value" />-->
                 </TableRow>
 
                 <TableRow
@@ -67,9 +348,9 @@
                         style="@style/TextView.Row"
                         android:text="@string/office" />
 
-                    <TextView
+                    <!--<TextView
                         android:id="@+id/tv_groupoffice"
-                        style="@style/TextView.Row.Value" />
+                        style="@style/TextView.Row.Value" />-->
                 </TableRow>
 
                 <TableRow
@@ -125,19 +406,22 @@
                 layout="@layout/view_account_accordion_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
 
             <include
                 android:id="@+id/account_accordion_section_savings"
                 layout="@layout/view_account_accordion_section"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
             <include
                 android:id="@+id/account_accordion_section_recurring"
                 layout="@layout/view_account_accordion_section"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
         </LinearLayout>
     </ScrollView>
@@ -147,15 +431,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/btn_activate_group"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="@string/activate_group"
-            android:background="@color/accent" />
+            android:background="@color/accent"
+            android:text="@string/activate_group" />
     </LinearLayout>
 
 </RelativeLayout>
