--- a/mifosng-android/src/main/res/drawable-mdpi/circular_background_btn.xml
+++ b/mifosng-android/src/main/res/drawable-mdpi/circular_background_btn.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <corners android:radius="25dp"/>
-    <solid android:color="#F9F9F9"/>
+    <solid android:color="#FFFFFF"/>
+
 </shape>
