--- a/mifosng-android/src/main/res/layout/activity_dashboard.xml
+++ b/mifosng-android/src/main/res/layout/activity_dashboard.xml
@@ -1,29 +1,56 @@
-<androidx.drawerlayout.widget.DrawerLayout
-    android:id="@+id/drawer"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".online.DashboardActivity">
 
-    <LinearLayout
-        style="@style/LinearLayout.Base">
+    <LinearLayout style="@style/LinearLayout.Base">
 
-        <include layout="@layout/toolbar"/>
+        <include layout="@layout/toolbar" />
 
-        <FrameLayout
-            style="@style/FrameLayout.Container"/>
+        <FrameLayout style="@style/FrameLayout.Container" />
 
     </LinearLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/view_nav_drawer_header"
-        app:menu="@menu/menu_nav_drawer"
-        />
+        android:layout_marginEnd="-65dp"
+        android:layout_marginRight="-65dp"
+        android:background="@color/primary"
+        android:fitsSystemWindows="true">
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            app:elevation="0dp"
+            android:elevation="0dp"
+            app:headerLayout="@layout/view_nav_drawer_header"
+            app:itemIconTint="@color/red_app"
+            app:itemTextColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/menu_nav_drawer" />
+
+        <LinearLayout
+            android:id="@+id/ll_white_space"
+            android:layout_width="55dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@drawable/round_edge_for_drawer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="65dp"
+            android:elevation="10dp"
+            android:layout_marginBottom="65dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.drawerlayout.widget.DrawerLayout>
