--- a/mifosng-android/src/main/res/layout/activity_new_pass_code.xml
+++ b/mifosng-android/src/main/res/layout/activity_new_pass_code.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/primary"
     android:paddingBottom="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -167,6 +167,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="1"
@@ -183,6 +184,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="2"
@@ -199,6 +201,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="3"
@@ -215,6 +218,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="4"
@@ -231,6 +235,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="5"
@@ -247,6 +252,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="6"
@@ -263,6 +269,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="7"
@@ -279,6 +286,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="8"
@@ -295,6 +303,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="9"
@@ -311,6 +320,7 @@
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/circular_background_btn"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="onKeypadBtnClick"
             android:tag="0"
@@ -344,10 +354,11 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="@dimen/default_margin"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/login_button_rounded"
+            android:onClick="savePassCode"
             android:text="@string/passcode_setup"
             android:textColor="@color/white"
-            android:onClick="savePassCode"
-            android:background="@drawable/login_button_rounded"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_keypad_zero" />
@@ -356,14 +367,14 @@
             android:id="@+id/ll_add_biometric"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/fingerprint_button_rounded"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center"
             android:onClick="startBiometricActivity"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
             android:padding="10dp"
-            android:background="@drawable/fingerprint_button_rounded"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_set_passcode">
@@ -379,9 +390,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:textSize="18sp"
                 android:text="@string/biometric"
-                android:textColor="@color/red_app" />
+                android:textColor="@color/red_app"
+                android:textSize="18sp" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
