--- a/mifosng-android/src/main/res/layout/view_nav_drawer_header.xml
+++ b/mifosng-android/src/main/res/layout/view_nav_drawer_header.xml
@@ -4,17 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@drawable/drawer_profile_header"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
 
         <com.mifos.mifosxdroid.views.CircularImageView
             android:id="@+id/iv_user_picture"
@@ -29,19 +28,19 @@
             android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
             android:ellipsize="end"
             android:lines="1"
             android:text="@string/login"
+            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/white"/>
+            android:textColor="@color/black"/>
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/user_status_toggle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/offline_mode"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             app:showText="false"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
